--- a/jenkins/Makefile
+++ b/jenkins/Makefile
@@ -3,7 +3,7 @@ build:
 
 run:
 	docker rm -f jenkins || true
-	docker run -it -P -d --name jenkins upwork/jenkins
+	docker run -it -P -d --name jenkins_test upwork/jenkins
 
 run2:
 	docker run -it -P -d --name jenkins2 upwork/jenkins
