updated github link

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -16,7 +16,7 @@ RUN  mkdir -p /usr/share/jenkins/ref/plugins
 RUN  chmod +x /tmp/batch-install-jenkins-plugins.sh
 RUN  /tmp/batch-install-jenkins-plugins.sh --plugins /tmp/plugins.txt  --plugindir /usr/share/jenkins/ref/plugins
 
-#COPY JobCreatorConfig.xml /tmp/config.xml
+COPY JobCreatorConfig.xml /tmp/config.xml
 #RUN java -jar ./var/jenkins_home/war/WEB-INF/jenkins-cli.jar -s http://localhost:8080/ create-job JobsCreator < /tmp/config.xml
 
  
