--- a/application/Makefile
+++ b/application/Makefile
@@ -1,5 +1,5 @@
 build:
-	docker pull nimmis/apache-php7	
+	docker build nimmis/apache-php7	.
 run:
 	docker rm -vf php-app || true
 	docker run -d -p 8080:80 -v ${PWD}/code:/var/www/html/ --link some-mysql:mysql --name php-app  nimmis/apache-php7
